feat: :white_check_mark: Add: Lista menu titulo e item

--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
 <body>
     <header class="cabeçalho">
         <div class="container">
-            <span class="cabeçalho_menu-hamburguer container__imagem"></span>
+            <input type="checkbox" id="menu" class="container__botao">
+            <label for="menu">
+                <span class="cabeçalho_menu-hamburguer container__imagem"></span>
+            </label>
+            <ul class="lista-menu">
+                <li class="lista-menu__titulo">Categoria</li>
+                <li class="lista-menu__item"><a href="#" class="lista-menu__link">PROGRAMAÇÃO</a></li>
+                <li class="lista-menu__item"><a href="#" class="lista-menu__link">FRONT-END</a></li>
+                <li class="lista-menu__item"><a href="#" class="lista-menu__link">INFRAESTRUTURA</a></li>
+                <li class="lista-menu__item"><a href="#" class="lista-menu__link">BUSINESS</a></li>
+                <li class="lista-menu__item"><a href="#" class="lista-menu__link">DESIGN & UX</a></li>
+            </ul>
             <img src="./img_figma/Logo.svg" alt="Logo da Alura" class="container__imagem">
         </div>
         <div class="container">
