--- a/index.html
+++ b/index.html
@@ -173,6 +173,10 @@
         <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
         <input type="email" class="contato__email" placeholder="Cadastre seu e-mail">
     </section>
+    <hr/>
+    <footer class="rodapé">
+        <h2 class="rodapé__titulo">Grupo Alura</h2>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script>
         const swiper = new Swiper('.swiper', {
