Add: Iniciando layout para desktop 1728px

--- a/index.html
+++ b/index.html
@@ -52,8 +52,14 @@
         <div class="container">
             <a href="#"><img src="./img_figma/Favoritos.svg" alt="Meus favorito"
                     class="container__imagem container__imagem-transparente"></a>
-            <a href="#"><img src="./img_figma/Compras.svg" alt="Carrinho de Compras" class="container__imagem"></a>
-            <a href="#"><img src="./img_figma/Usuário.svg" alt="Meu perfil" class="container__imagem"></a>
+            <a href="#" class="container__link">
+                <img src="./img_figma/Compras.svg" alt="Carrinho de Compras" class="container__imagem">
+                <p class="container__texto">Minha sacola</p>
+            </a>
+            <a href="#" class="container__link">
+                <img src="./img_figma/Usuário.svg" alt="Meu perfil" class="container__imagem">
+                <p class="container__texto">Meu perfil</p>
+            </a>
         </div>
     </header>
     <section class="banner">
@@ -288,5 +294,4 @@
         });
     </script>
 </body>
-
 </html>
