feat: :white_check_mark: Add: Criando Layout desktop refatorando contato, carrossel e footer

--- a/index.html
+++ b/index.html
@@ -69,102 +69,111 @@
     </section>
     <section class="carrossel">
         <h2 class="carrossel__titulo">Últimos lançamentos</h2>
-        <div class="swiper">
-            <!-- Additional required wrapper -->
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide"><img src="./img_figma/ApacheKafka.svg"
-                        alt="Livro sobre apaxhe kafta e spring boot da alura books"></div>
-                <div class="swiper-slide"><img src="./img_figma/Liderança.svg"
-                        alt="Livro sobre liderança e design da alura books"></div>
-                <div class="swiper-slide"><img src="./img_figma/Javascript.svg"
-                        alt="Livro sobre javascript assertivo da alura books"></div>
-                <div class="swiper-slide"><img src="./img_figma/Guia Front-end.svg"
-                        alt="Livro guia front -end alura books"></div>
-                <div class="swiper-slide"><img src="./img_figma/Portugol.svg" alt="Livro sobre Portugol"></div>
-                <div class="swiper-slide"><img src="./img_figma/Acessibilidade.svg" alt="Livro sobre acessibilidade">
+        <div class="carrossel__container">
+            <div class="swiper">
+                <!-- Additional required wrapper -->
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide"><img src="./img_figma/ApacheKafka.svg"
+                            alt="Livro sobre apaxhe kafta e spring boot da alura books"></div>
+                    <div class="swiper-slide"><img src="./img_figma/Liderança.svg"
+                            alt="Livro sobre liderança e design da alura books"></div>
+                    <div class="swiper-slide"><img src="./img_figma/Javascript.svg"
+                            alt="Livro sobre javascript assertivo da alura books"></div>
+                    <div class="swiper-slide"><img src="./img_figma/Guia Front-end.svg"
+                            alt="Livro guia front -end alura books"></div>
+                    <div class="swiper-slide"><img src="./img_figma/Portugol.svg" alt="Livro sobre Portugol"></div>
+                    <div class="swiper-slide"><img src="./img_figma/Acessibilidade.svg"
+                            alt="Livro sobre acessibilidade">
+                    </div>
                 </div>
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
-        <div class="card">
-            <!-- 1° linha -->
-            <div class="card__descrição">
-                <!-- 1° coluna -->
-                <div class="descrição">
-                    <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
-                    <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
-                    <p class="descrição__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+            <div class="card">
+                <!-- 1° linha -->
+                <div class="card__descrição">
+                    <!-- 1° coluna -->
+                    <div class="descrição">
+                        <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
+                        <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
+                        <p class="descrição__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                    </div>
+                    <!-- 2° coluna -->
+                    <img src="./img_figma/Perfil-escritora 2.svg" class="descrição__imagem">
                 </div>
-                <!-- 2° coluna -->
-                <img src="./img_figma/Perfil-escritora 2.svg" class="descrição__imagem">
-            </div>
-            <!-- 2° linha -->
-            <div class="card__botões">
-                <!--  1° coluna -->
-                <ul class="botões">
-                    <li class="botões__item"><img src="./img_figma/Favoritos.svg" alt="Favoritar Livro"></li>
-                    <li class="botões__item"><img src="./img_figma/Compras.svg" alt="adicionar no carrinho de compras">
-                    </li>
-                </ul>
-                <!-- 2° coluna -->
-                <a href="#" class="botões__ancora">Saíba mais</a>
+                <!-- 2° linha -->
+                <div class="card__botões">
+                    <!--  1° coluna -->
+                    <ul class="botões">
+                        <li class="botões__item"><img src="./img_figma/Favoritos.svg" alt="Favoritar Livro"></li>
+                        <li class="botões__item"><img src="./img_figma/Compras.svg"
+                                alt="adicionar no carrinho de compras">
+                        </li>
+                    </ul>
+                    <!-- 2° coluna -->
+                    <a href="#" class="botões__ancora">Saíba mais</a>
+                </div>
             </div>
         </div>
     </section>
     <section class="carrossel">
         <h2 class="carrossel__titulo">MAIS VENDIDOS</h2>
         <!-- Slider main container -->
-        <div class="swiper">
-            <!-- Additional required wrapper -->
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide"><img src="./img_figma/Javascript.svg"
-                        alt="Livro sobre javascript assertivo da alura books"></div>
-                <div class="swiper-slide"><img src="./img_figma/ApacheKafka.svg"
-                        alt="Livro sobre apaxhe kafta e spring boot da alura books"></div>
-                <div class="swiper-slide"><img src="./img_figma/Liderança.svg"
-                        alt="Livro sobre liderança e design da alura books"></div>
-                <div class="swiper-slide"><img src="./img_figma/Guia Front-end.svg"
-                        alt="Livro guia front -end alura books"></div>
-                <div class="swiper-slide"><img src="./img_figma/Acessibilidade.svg" alt="Livro sobre acessibilidade">
+        <div class="carrossel__container">
+            <div class="swiper">
+                <!-- Additional required wrapper -->
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide"><img src="./img_figma/Javascript.svg"
+                            alt="Livro sobre javascript assertivo da alura books"></div>
+                    <div class="swiper-slide"><img src="./img_figma/ApacheKafka.svg"
+                            alt="Livro sobre apaxhe kafta e spring boot da alura books"></div>
+                    <div class="swiper-slide"><img src="./img_figma/Liderança.svg"
+                            alt="Livro sobre liderança e design da alura books"></div>
+                    <div class="swiper-slide"><img src="./img_figma/Guia Front-end.svg"
+                            alt="Livro guia front -end alura books"></div>
+                    <div class="swiper-slide"><img src="./img_figma/Acessibilidade.svg"
+                            alt="Livro sobre acessibilidade">
+                    </div>
                 </div>
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
-        <div class="card">
-            <!-- 1° linha -->
-            <div class="card__descrição">
-                <!-- 1° coluna -->
-                <div class="descrição">
-                    <h3 class="descrição__titulo"><img src="./img_figma/Estrelinhas.svg"
-                            alt="Escritora favorita do mês"></h3>
-                    <h3 class="descrição__titulo autora__nome">Autora do Mês</h3>
-                    <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
-                    <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.
-                    </p>
+            <div class="card">
+                <!-- 1° linha -->
+                <div class="card__descrição">
+                    <!-- 1° coluna -->
+                    <div class="descrição">
+                        <h3 class="descrição__titulo"><img src="./img_figma/Estrelinhas.svg"
+                                alt="Escritora favorita do mês"></h3>
+                        <h3 class="descrição__titulo autora__nome">Autora do Mês</h3>
+                        <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
+                        <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em
+                            Front-End.
+                        </p>
+                    </div>
+                    <!-- 2° coluna -->
+                    <img src="./img_figma/Perfil-escritora 1.svg" class="descrição__imagem">
                 </div>
-                <!-- 2° coluna -->
-                <img src="./img_figma/Perfil-escritora 1.svg" class="descrição__imagem">
-            </div>
-            <!-- 2° linha -->
-            <div class="card__botões">
-                <!--  1° coluna -->
-                <ul class="botões">
-                    <li class="botões__item"><img src="./img_figma/Favoritos.svg" alt=""></li>
-                    <li class="botões__item"><img src="./img_figma/Compras.svg" alt="adicionar no carrinho de compras">
-                    </li>
-                </ul>
-                <!-- 2° coluna -->
-                <a href="#" class="botões__ancora">Saíba mais</a>
+                <!-- 2° linha -->
+                <div class="card__botões">
+                    <!--  1° coluna -->
+                    <ul class="botões">
+                        <li class="botões__item"><img src="./img_figma/Favoritos.svg" alt=""></li>
+                        <li class="botões__item"><img src="./img_figma/Compras.svg"
+                                alt="adicionar no carrinho de compras">
+                        </li>
+                    </ul>
+                    <!-- 2° coluna -->
+                    <a href="#" class="botões__ancora">Saíba mais</a>
+                </div>
             </div>
         </div>
     </section>
@@ -173,6 +182,9 @@
         <ul class="tópicos__lista">
             <li class="tópicos__item">
                 <a href="#" class="tópicos__link">Android</a>
+            </li>
+            <li class="tópicos__item">
+                <a href="#" class="tópicos__link">oo</a>
             </li>
             <li class="tópicos__item">
                 <a href="#" class="tópicos__link">Marketing Digital</a>
@@ -187,13 +199,10 @@
                 <a href="#" class="tópicos__link">HTML & CSS</a>
             </li>
             <li class="tópicos__item">
-                <a href="#" class="tópicos__link">Python</a>
-            </li>
-            <li class="tópicos__item">
-                <a href="#" class="tópicos__link">oo</a>
-            </li>
-            <li class="tópicos__item">
                 <a href="#" class="tópicos__link">Java</a>
+            </li>
+            <li class="tópicos__item">
+                <a href="#" class="tópicos__link">Python</a>
             </li>
         </ul>
     </section>
@@ -216,7 +225,7 @@
             <li class="lista-rodapé__item">
                 <img src="./img_figma/img_footer/CasaDoCodigo.svg" alt="Logo da casa do código">
                 <a href="#" class="lista-rodapé__link">Casa do código</a>
-            </li>           
+            </li>
         </ul>
         <ul class="lista-rodapé">
             <li class="lista-rodapé__titulo">Educação online</li>
@@ -294,4 +303,5 @@
         });
     </script>
 </body>
+
 </html>
